cleaned up backend and swagger
