# backend/Routes/apiRoutes.js
@@ -5,8 +5,6 @@ const router = express.Router();
 // Get
 router.get('/healthEndpoint', api.healthEndpoint);
 router.get('/getProducts', api.getProducts);
-router.get('/getscrumMasterProducts/:name', api.getscrumMasterProducts);
-router.get('/getdeveloperProducts/:name', api.getdeveloperProducts);
 
 // Post
 router.post('/addProduct', api.addProduct);
