# backend/Swagger.json
@@ -60,110 +60,6 @@
         }
       }
     },
-    "/getscrumMasterProducts/{name}": {
-      "get": {
-        "summary": "Gets products for certain scrum master",
-        "parameters": [
-          {
-            "name": "name",
-            "in": "path",
-            "description": "Name of person you're looking for",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Successfully received all products for a certain Scrum Master",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "products": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/definitions/product"
-                  }
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Client didn't input anything, needs to input a name",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "message": {
-                  "type": "string"
-                }
-              }
-            }
-          },
-          "500": {
-            "description": "Could not retrieve products, server error",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "message": {
-                  "type": "string"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/getdeveloperProducts/{name}": {
-      "get": {
-        "summary": "Gets products for certain developer",
-        "parameters": [
-          {
-            "name": "name",
-            "in": "path",
-            "description": "Name of person you're looking for",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Successfully received all products for a certain Developer",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "products": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/definitions/product"
-                  }
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Client didn't input anything, needs to input a name",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "message": {
-                  "type": "string"
-                }
-              }
-            }
-          },
-          "500": {
-            "description": "Could not retrieve products, server error",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "message": {
-                  "type": "string"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
     "/addProduct": {
       "post": {
         "summary": "Adds a product to the projects.json file",
